add put admin user func and samll fix. (not add test yet)
